--- a/index.html
+++ b/index.html
@@ -164,17 +164,17 @@
 
 	<div class="main-carousel" data-flickity='{"cellAlign": "center", "contain": "true", "wrapAround": "true"}'>
 
-		<div class="carousel-cell"> <img src="gassner1.png"> </div>
+		<div class="carousel-cell"> <img src="gassner1.PNG"> </div>
 
-		<div class="carousel-cell"> <img src="gassner2.png"> </div>
+		<div class="carousel-cell"> <img src="gassner2.PNG"> </div>
 
-		<div class="carousel-cell"> <img src="gassner3.png"> </div>
+		<div class="carousel-cell"> <img src="gassner3.PNG"> </div>
 
-		<div class="carousel-cell"> <img src="gassner4.png"> </div>
+		<div class="carousel-cell"> <img src="gassner4.PNG"> </div>
 
-		<div class="carousel-cell"> <img src="gassner5.png"> </div>
+		<div class="carousel-cell"> <img src="gassner5.PNG"> </div>
 
-		<div class="carousel-cell"> <img src="gassner6.png"> </div>
+		<div class="carousel-cell"> <img src="gassner6.PNG"> </div>
 
 		<div class="carousel-cell"> <img src="gassner7.png"> </div>
 
